Migrate junit version in tests (#860)